# glTestBed

./: CMakeLists.txt  README.md  glTestBed.code-workspace
assets/models/brick/: brick.mtl
examples/01 Diffuse Shading/private/: diffuseShading.cpp
examples/01 Diffuse Shading/public/: diffuseShading.h
examples/01_Diffuse_Shading/: Makefile  diffuseShading.cpp  diffuseShading.h
examples/02_Phong_Shading/: Makefile  phongShading.cpp  phongShading.h
examples/03_Texture_Mapping/: Makefile  textureMapping.cpp  textureMapping.h
examples/flatshading/private/: flatShading.cpp
examples/flatshading/public/: flatShading.h
lib/: tiny_obj_loader.cpp
shaders/: diffuse_shading.fs  diffuse_shading.vs  diffuse_shading_light.fs  diffuse_shading_light.vs  phong_shading.vs  texture_mapping.fs  texture_mapping.vs
src/private/: Shader.cpp  glTestBedBase.cpp
src/public/: Shader.h  glTestBedBase.h
